@@ -1,47 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <window>
-	<defaultcontrol always="true">50</defaultcontrol>
+	<defaultcontrol always="true">55</defaultcontrol>
 	<backgroundcolor>background</backgroundcolor>
-	<views>50,52,53,54,55,500</views>
+	<views>55</views>
 	<menucontrol>9000</menucontrol>
 	<controls>`
 		<include>DefaultBackground</include>
 		<control type="group">
 			<animation effect="fade" start="100" end="0" time="200" tween="sine" condition="$EXP[infodialog_active]">Conditional</animation>
-			<include>View_50_List</include>
-			<include>View_52_IconWall</include>
-			<include>View_53_Shift</include>
-			<control type="group">
-				<left>50</left>
-				<include>View_54_InfoWall</include>
-			</control>
 			<include>View_55_WideList</include>
-			<include>View_500_Wall</include>
 			<include>CommonScrollbars</include>
 			<control type="group">
 				<include>OpenClose_Left</include>
-				<visible>Control.Isvisible(54)</visible>
-				<include>Visible_Left</include>
-				<visible>Container.Content(games)</visible>
-				<include content="ContentPanel">
-					<param name="width" value="656" />
-				</include>
-				<control type="textbox">
-					<left>40</left>
-					<top>360</top>
-					<width>529</width>
-					<height>413</height>
-					<align>center</align>
-					<aligny>center</aligny>
-					<font>font27</font>
-					<textcolor>80FFFFFF</textcolor>
-					<label>$LOCALIZE[19055]</label>
-					<visible>!ListItem.IsParentFolder + ListItem.IsFolder</visible>
-				</control>
-			</control>
-			<control type="group">
-				<include>OpenClose_Left</include>
-				<visible>Control.IsVisible(50) | Control.IsVisible(55)</visible>
+				<visible>Control.IsVisible(55)</visible>
 				<include>Visible_Left</include>
 				<include>ListThumbInfoPanel</include>
 			</control>
